// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FoAICongratulations > renders default as expected 1`] = `
<div>
  <div
    class="congratulations container-lined p-8 bg-white"
  >
    <div
      class="flex flex-col gap-2"
    >
      <p
        class="congratulations__title bluedot-h4 mb-2 text-center"
      >
        Congratulations on completing the Future of AI course!
      </p>
      <p
        class="bluedot-p not-prose congratulations__description"
      >
        Want to go deeper? 
        <span
          class="font-semibold"
        >
          The AGI Strategy course
        </span>
         is the natural next step: 25 hours, facilitated in small groups with live discussion. No specific background required. New rounds start every month.
      </p>
    </div>
    <div
      class="mt-4 flex justify-start"
    >
      <a
        class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none text-size-sm bd-md:text-size-xs px-4 py-3 rounded-sm font-[650] cta-button--primary bg-bluedot-normal link-on-dark"
        href="/courses/agi-strategy"
        tabindex="0"
      >
        Apply now
        <span
          class="cta-button__chevron ml-3"
        >
          <svg
            class="cta-button__chevron-icon size-2"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 320 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
            />
          </svg>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`FoAICongratulations > renders with custom className 1`] = `
<div>
  <div
    class="congratulations container-lined p-8 bg-white max-w-2xl mx-auto"
  >
    <div
      class="flex flex-col gap-2"
    >
      <p
        class="congratulations__title bluedot-h4 mb-2 text-center"
      >
        Congratulations on completing the Future of AI course!
      </p>
      <p
        class="bluedot-p not-prose congratulations__description"
      >
        Want to go deeper? 
        <span
          class="font-semibold"
        >
          The AGI Strategy course
        </span>
         is the natural next step: 25 hours, facilitated in small groups with live discussion. No specific background required. New rounds start every month.
      </p>
    </div>
    <div
      class="mt-4 flex justify-start"
    >
      <a
        class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none text-size-sm bd-md:text-size-xs px-4 py-3 rounded-sm font-[650] cta-button--primary bg-bluedot-normal link-on-dark"
        href="/courses/agi-strategy"
        tabindex="0"
      >
        Apply now
        <span
          class="cta-button__chevron ml-3"
        >
          <svg
            class="cta-button__chevron-icon size-2"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 320 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
            />
          </svg>
        </span>
      </a>
    </div>
  </div>
</div>
`;
